[gd_scene load_steps=11 format=3 uid="uid://cmljcpcyimrfu"]

[ext_resource type="Script" uid="uid://dcmki6escbhnr" path="res://player/Player.gd" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://bsmdmgp5v847t" path="res://player/Movement.gd" id="2_cxr5p"]
[ext_resource type="Script" uid="uid://cbnsa4xrbfft0" path="res://player/Dash.gd" id="3_tdg3f"]
[ext_resource type="Script" uid="uid://syivd0wcff2t" path="res://player/Shoot.gd" id="4_dtqjt"]
[ext_resource type="Script" uid="uid://2hlonibn60ew" path="res://player/Boundary.gd" id="5_5ncpa"]
[ext_resource type="PackedScene" uid="uid://d4g5auo6ayuq3" path="res://Bullet.tscn" id="5_tdg3f"]
[ext_resource type="Script" uid="uid://cy0qbex8752bj" path="res://player/Animation.gd" id="7_dtqjt"]
[ext_resource type="Script" uid="uid://7e0abbf3so8k" path="res://player/Melee.gd" id="8_5ncpa"]
[ext_resource type="Texture2D" uid="uid://b0dnxs32l0co0" path="res://player/arr.png" id="9_wi0c6"]
[ext_resource type="Script" uid="uid://bhjs4pme1aisq" path="res://player/Health.gd" id="10_ndjxb"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_xhfnw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 1)

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(21.135, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
scale = Vector2(0.956092, 0.96437)
polygon = PackedVector2Array(0, -23.8498, 17.7807, 14.5173, -16.7348, 14.5173)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.96, 0)
scale = Vector2(0.08, 0.1)
texture = ExtResource("9_wi0c6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Components" type="Node" parent="."]

[node name="MeleeAttackComponent" type="Node" parent="Components"]
script = ExtResource("8_5ncpa")

[node name="MovementComponent" type="Node" parent="Components"]
script = ExtResource("2_cxr5p")

[node name="DashComponent" type="Node" parent="Components"]
script = ExtResource("3_tdg3f")

[node name="ShootingComponent" type="Node" parent="Components"]
script = ExtResource("4_dtqjt")
bullet_scene = ExtResource("5_tdg3f")

[node name="BoundaryComponent" type="Node" parent="Components"]
script = ExtResource("5_5ncpa")

[node name="AnimationComponent" type="Node" parent="Components"]
script = ExtResource("7_dtqjt")

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("10_ndjxb")
